app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 /* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;

   background-image: url('http://www.consultorio20.com.br/wp-content/uploads/2016/02/Geometric-Background.jpg.pagespeed.ce._pT6EVah5D.jpg');
 }

 li{
    list-style-type: none;
  }

.header{
  position: fixed;
  width: 100%;
  z-index: 1;
  padding-top: 20px;
  background-color: #120A8F;
}

